more development and add shoaling example

--- a/bathtub.ipynb
+++ b/bathtub.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3fb514c44126f52f8a0a038db62822fc7a866271d90d76fc1dc1676e694c7e52"
+  "signature": "sha256:ab52eb041c08afd8a06fcb01f4bf20c950abbd7c63667e46c5082fb40d147862"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -140,9 +140,9 @@
      "source": [
       "Next we have to specify how the water level is described. We call the water depth at any given location in the model domain, confusingly, the water *height*, i.e. the height of the water surface from the bed. So the variation in water height across the model domain at any point in time defines the water surface at that time.\n",
       "\n",
-      "Instead of using a single variable for water height, we split the total water height up in to two components: (1) the height to a fixed *water level datum*; and (2) the height of the water surface *relative to this datum*. The reason for doing this is that the water level needs to be measured relative to a horizontal plane. Although we're going to used a flat seabed in this model, in the more general case of variable bathymetry, it would not be clear whether changes in water depth were due to variations in the seabed or variations in the water surface. We need a fixed, horizontal datum, independent of both the seabed and the water surface in order to measure (and indeed, define) either independently of the other. \n",
+      "Instead of using a single variable for water height, we split the total water height up in to two components: (1) the height to a fixed *water level datum*; and (2) the height of the water surface *relative to this datum*. The reason for doing this is that the water level needs to be measured relative to a horizontal plane if differences in water height across space (and therefore the pressure gradient) are to be resolved. If we simply used the total water depth to measure differences in water level across space we would be implicitly defining the seabed as the reference plane. But the seabed is scarcely completely flat and in the case of a non-flat seabed it would not be clear whether changes in water depth were due to variations in the seabed or variations in the water surface. We're going to assume a flat seabed in this model, but it is good practice to used an independent, fixed, horizontal datum against which to define both the water surface and the seabed. \n",
       "\n",
-      "We're calling the former $h$ and the latter $\\eta$. Since we're just assuming uniform bathymetry, we'll set $h$ to a constant value:"
+      "We're calling the height to the datum $h$ and the water level relative to the datum $\\eta$. Since we're just assuming uniform bathymetry, we'll set $h$ to a constant value:"
      ]
     },
     {
@@ -154,7 +154,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 133
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
